add new videos and update links

--- a/holodeck/index.html
+++ b/holodeck/index.html
@@ -120,12 +120,22 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://arxiv.org/abs/2312.09067"
+                <a href="../papers/holodeck.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                   </span>
                   <span>Paper</span>
+                </a>
+              </span>
+              <!-- arxiv Link. -->
+              <span class="link-block">
+                <a href="https://arxiv.org/abs/2312.09067"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="ai ai-arxiv"></i>
+                  </span>
+                  <span>arXiv</span>
                 </a>
               </span>
               <!-- Code Link. -->
@@ -148,17 +158,6 @@
                   <span>Email</span>
                   </a>
               </span>
-
-
-              <!-- Dataset Link. -->
-              <!-- <span class="link-block">
-                <a href="https://github.com/google/nerfies/releases/tag/0.1"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="far fa-images"></i>
-                  </span>
-                  <span>Data</span>
-                  </a> -->
             </div>
           </div>
         </div>
@@ -209,6 +208,28 @@
             </div>
             <video poster="" autoplay="" muted loop="" style="pointer-events: none; width: 450px;">
               <source src="./static/videos/a_spa_with_large_hot_tubs_and_massage_tables|0|0|sunny_vondelpark_4k|1.0|50.0|360|12.0|30|10|CYCLES_video_compressed.mp4" type="video/mp4">
+            </video>
+          </div>
+
+          <div class="item-1 image-caption-container">
+            <div class="caption">
+              <center>
+                a bike shop with various types of bicycles
+              </center>  
+            </div>
+            <video poster="" autoplay="" muted loop="" style="pointer-events: none; width: 450px;">
+              <source src="./static/videos/a_bike_shop_with_various_types_0_0_sunny_vondelpark_4k_1.0_50.0_360_12.0_30_10_CYCLES_video_compressed.mp4" type="video/mp4">
+            </video>
+          </div>
+
+          <div class="item-2 image-caption-container">
+            <div class="caption">
+              <center>
+                a garage with a red sedan and a black bicycle
+              </center>  
+            </div>
+            <video poster="" autoplay="" muted loop="" style="pointer-events: none; width: 450px;">
+              <source src="./static/videos/a_garage_with_a_red_sedan_and_a_black_bicycle_0_0_sunny_vondelpark_4k_1.0_50.0_360_12.0_30_10_CYCLES_video_compressed.mp4" type="video/mp4">
             </video>
           </div>
           
@@ -545,9 +566,11 @@
 <footer class="footer">
   <div class="container">
     <div class="content has-text-centered">
-      <a class="icon-link"
-         href="https://arxiv.org/abs/2312.09067">
+      <a class="icon-link" href="../papers/holodeck.pdf" class="external-link" disabled>
         <i class="fas fa-file-pdf"></i>
+      </a>
+      <a class="icon-link" href="https://arxiv.org/abs/2312.09067" class="external-link" disabled>
+        <i class="ai ai-arxiv"></i>
       </a>
       <a class="icon-link" href="https://github.com/allenai/Holodeck" class="external-link" disabled>
         <i class="fab fa-github"></i>
