--- a/knobo/index.html
+++ b/knobo/index.html
@@ -81,7 +81,7 @@
             <br>
           </div>
           <div class="is-size-5 publication-authors">
-            <span class="author-block"></span></sup>University of Pennsylvania,</span>&nbsp;&nbsp;
+            <span class="author-block"></span></sup>University of Pennsylvania</span>&nbsp;&nbsp;
           </div>
 
           <div class="is-size-5 emails">
@@ -118,7 +118,7 @@
               </span>
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://github.com/allenai/Holodeck"
+                <a href="https://github.com/YueYANG1996/KnoBo"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
@@ -157,6 +157,7 @@
 
     <br>
     <br>
+    <br>
 
     <img src="./static/images/intro_new.png"
                    class="interpolation-image"
@@ -179,7 +180,7 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            While deep networks have achieved broad success in analyzing natural images, when applied to medical scans, they often fail in unexcepted situations. We investigate this challenge and focus on model sensitivity to domain shifts, such as data sampled from different hospitals or data confounded by demographic variables such as sex, race, etc, in the context of chest X-rays and skin lesion images. A key finding we show empirically is that existing visual backbones lack an appropriate prior from the architecture for reliable generalization in these settings. Taking inspiration from medical training, we propose giving deep networks a prior grounded in explicit medical knowledge communicated in natural language. To this end, we introduce Knowledge-enhanced Bottlenecks (KnoBo), a class of concept bottleneck models that incorporates knowledge priors that constrain it to reason with clinically relevant factors found in medical textbooks or PubMed. KnoBo uses retrieval-augmented language models to design an appropriate concept space paired with an automatic training procedure for recognizing the concept. We evaluate different resources of knowledge and recognition architectures on a broad range of domain shifts across 20 datasets. In our comprehensive evaluation with two imaging modalities, KnoBo outperforms fine-tuned models on confounded datasets by 32.4% on average. Finally, evaluations reveal that PubMed is a promising resource for making medical models less sensitive to domain shift, outperforming other resources on diversity of information and final prediction performance.
+            While deep networks have achieved broad success in analyzing natural images, when applied to medical scans, they often fail in unexcepted situations. We investigate this challenge and focus on model sensitivity to domain shifts, such as data sampled from different hospitals or data confounded by demographic variables such as sex, race, etc, in the context of chest X-rays and skin lesion images. A key finding we show empirically is that existing visual backbones lack an appropriate prior from the architecture for reliable generalization in these settings. Taking inspiration from medical training, we propose giving deep networks a prior grounded in explicit medical knowledge communicated in natural language. To this end, we introduce <strong>Kno</strong>wledge <strong>Bo</strong>ttlenecks (<strong>KnoBo</strong>), a class of concept bottleneck models that incorporates knowledge priors that constrain it to reason with clinically relevant factors found in medical textbooks or PubMed. KnoBo uses retrieval-augmented language models to design an appropriate concept space paired with an automatic training procedure for recognizing the concept. We evaluate different resources of knowledge and recognition architectures on a broad range of domain shifts across 20 datasets. In our comprehensive evaluation with two imaging modalities, KnoBo outperforms fine-tuned models on confounded datasets by 32.4% on average. Finally, evaluations reveal that PubMed is a promising resource for making medical models less sensitive to domain shift, outperforming other resources on diversity of information and final prediction performance.
           </p>
         </div>
       </div>
@@ -194,7 +195,7 @@
     <!-- Motivation. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-five-fifths">
-        <h2 class="title is-3">Motivation: Deep Networks Lack Priors for Medical Images</h2>
+        <h2 class="title is-3">Deep Networks Lack Priors for Medical Images</h2>
         <div class="content has-text-justified">
           <p>
             Priors are an important signal allowing models to adopt appropriate hypotheses in low or misleading data regimes. Vision backbones have an effective deep image prior on natural images even when entirely untrained. In contrast, <strong>across multiple medical modalities (X-rays and skin lesion images), the deep image prior in current major visual backbones is no more effective than using pixels (and often worse)</strong>.
@@ -260,7 +261,7 @@
         <h2 class="title is-3">KnoBo Performs the Best across Confounded and Unconfounded Data</h2>
         <div class="content has-text-centered">
           <p>
-            Across 10 confounded and 10 unconfounded datasets, KnoBo achieves the best performance on average.
+            Across 10 confounded and 10 unconfounded medical datasets, KnoBo achieves the best performance on average.
           </p>
         </div>
 
@@ -273,6 +274,34 @@
 
         <h2 class="subtitle has-text-justified" style="font-size: medium; text-align: right; margin-bottom: 10px; padding-bottom: 0;">
           [Averaged results across all datasets, including in-domain (ID), out-of-domain (OOD), domain-gap (∆, lower is better), and mean of ID and OOD (Avg) accuracy for confounded datasets. For unconfounded datasets (Unconfd), we report test accuracy. Overall performance is calculated as the mean of the Avg and Unconfd, the overall tradeoff between data conditions.]
+        </h2>
+
+      </div>
+  </div>
+</section>
+
+
+<section class="section", id="knowledge_source">
+  <div class="container is-max-desktop">
+    <!--  Knowledge Source -->
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-five-fifths">
+        <h2 class="title is-3"><span class="small-caps">PubMed</span> is a Promising Source for Medical Knowledge</h2>
+        <div class="content has-text-justified">
+          <p>
+            We explore 5 different sources of knowledge for retrieval-augmented generation and reveal that <span class="small-caps">PubMed</span> outperforms other resources in terms of both diversity of information and final prediction performance.
+          </p>
+        </div>
+
+        <img src="./static/images/knowledge_sources.png"
+                   class="interpolation-image"
+                   alt="Interpolate start reference image."
+                   width="90%"
+                   height="auto"
+          />
+
+        <h2 class="subtitle has-text-justified" style="font-size: medium; text-align: right; margin-bottom: 10px; padding-bottom: 0;">
+          [Comparison of concept bottlenecks built from different knowledge sources. <span class="small-caps">Prompt</span> is our baseline without retrieving documents for concept generation. We report the accuracy of confounded (Confd, average over ID and OOD), unconfounded (Unconfd) datasets, and the overall performance of all datasets. Diversity measures the difference between the concepts in a bottleneck.]
         </h2>
 
       </div>
@@ -302,7 +331,7 @@
       <a class="icon-link" href="https://arxiv.org/abs/2312.09067" class="external-link" disabled>
         <i class="ai ai-arxiv"></i>
       </a>
-      <a class="icon-link" href="https://github.com/allenai/Holodeck" class="external-link" disabled>
+      <a class="icon-link" href="https://github.com/YueYANG1996/KnoBo" class="external-link" disabled>
         <i class="fab fa-github"></i>
       </a>
       <a class="icon-link" href="mailto: yueyang1@seas.upenn.edu; myatskar@seas.upenn.edu" class="external-link" disabled>
