update knobo before arxiv

--- a/knobo/index.html
+++ b/knobo/index.html
@@ -245,9 +245,17 @@
         <h2 class="title is-3">KnoBo is More Robust to Domain Shifts.</h2>
         <div class="content has-text-justified">
           <p>
-            We evaluate 5 confounds per modality, covering scenarios of race, sex, age, scan position, and hospital, etc.
+            We evaluate 5 confounds per modality, covering scenarios of race, sex, age, scan position, and hospital, etc. Averaged over confounds, KnoBo
+            increases OOD performance by 41.8% and 22.9% on X-ray and skin lesion.
           </p>
         </div>
+
+        <img src="./static/images/confound_performance.png"
+                   class="interpolation-image"
+                   alt="Interpolate start reference image."
+                   width="100%"
+                   height="auto"
+          />
 
       </div>
   </div>
