--- a/knobo/index.html
+++ b/knobo/index.html
@@ -108,7 +108,7 @@
               </span>
               <!-- arxiv Link. -->
               <span class="link-block">
-                <a href="https://arxiv.org/abs/2312.09067"
+                <a href="https://arxiv.org/abs/2405.14839"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -256,6 +256,13 @@
                    width="100%"
                    height="auto"
           />
+        
+        <h2 class="subtitle has-text-justified" style="font-size: medium; text-align: right; margin-bottom: 10px; padding-bottom: 0;">
+          [Compare KnoBo and fine-tuned ViT on confounded datasets of two modalities (X-ray and skin lesion). We report in-domain (ID), out-of-domain (OOD), and average of ID and OOD (Avg) accuracy. The number about the arrow indicates the OOD improvement of KnoBo over fine-tuned ViT.]
+        </h2>
+
+
+          
 
       </div>
   </div>
@@ -312,6 +319,27 @@
           [Comparison of concept bottlenecks built from different knowledge sources. <span class="small-caps">Prompt</span> is our baseline without retrieving documents for concept generation. We report the accuracy of confounded (Confd, average over ID and OOD), unconfounded (Unconfd) datasets, and the overall performance of all datasets. Diversity measures the difference between the concepts in a bottleneck.]
         </h2>
 
+        <span class="link-block">
+          <p>
+            Example concept bottlenecks generated from <span class="small-caps">PubMed</span>:
+          </p>
+          <a href="static/example_concepts/xray_PubMed.html"
+             class="external-link button is-normal is-rounded is-light">
+            <span class="icon">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M0 64C0 46.3 14.3 32 32 32H480c17.7 0 32 14.3 32 32s-14.3 32-32 32V416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32V96C14.3 96 0 81.7 0 64zM256 96c-8.8 0-16 7.2-16 16v32H160c-8.8 0-16 7.2-16 16s7.2 16 16 16h80v48H128c-8.8 0-16 7.2-16 16s7.2 16 16 16H240v70.6L189.1 307c-5.2-2-10.6-3-16.2-3h-2.1c-23.6 0-42.8 19.2-42.8 42.8c0 9.6 3.2 18.9 9.1 26.4l18.2 23.2c9.7 12.4 24.6 19.6 40.3 19.6H316.4c15.7 0 30.6-7.2 40.3-19.6l18.2-23.2c5.9-7.5 9.1-16.8 9.1-26.4c0-23.6-19.2-42.8-42.8-42.8H339c-5.5 0-11 1-16.2 3L272 326.6V256H384c8.8 0 16-7.2 16-16s-7.2-16-16-16H272V176h80c8.8 0 16-7.2 16-16s-7.2-16-16-16H272V112c0-8.8-7.2-16-16-16zM208 352a16 16 0 1 1 0 32 16 16 0 1 1 0-32zm80 16a16 16 0 1 1 32 0 16 16 0 1 1 -32 0z"/></svg>
+            </span>
+            <span>X-ray Bottleneck (PubMed)</span>
+          </a>
+
+          <a href="static/example_concepts/skin_lesion_PubMed.html"
+             class="external-link button is-normal is-rounded is-light">
+            <span class="icon">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M288 32c0-17.7-14.3-32-32-32s-32 14.3-32 32V240c0 8.8-7.2 16-16 16s-16-7.2-16-16V64c0-17.7-14.3-32-32-32s-32 14.3-32 32V336c0 1.5 0 3.1 .1 4.6L67.6 283c-16-15.2-41.3-14.6-56.6 1.4s-14.6 41.3 1.4 56.6L124.8 448c43.1 41.1 100.4 64 160 64H304c97.2 0 176-78.8 176-176V128c0-17.7-14.3-32-32-32s-32 14.3-32 32V240c0 8.8-7.2 16-16 16s-16-7.2-16-16V64c0-17.7-14.3-32-32-32s-32 14.3-32 32V240c0 8.8-7.2 16-16 16s-16-7.2-16-16V32zM240 336a16 16 0 1 1 32 0 16 16 0 1 1 -32 0zm80 16a16 16 0 1 1 0 32 16 16 0 1 1 0-32zm48-16a16 16 0 1 1 32 0 16 16 0 1 1 -32 0zm-16 80a16 16 0 1 1 0 32 16 16 0 1 1 0-32zM240 432a16 16 0 1 1 32 0 16 16 0 1 1 -32 0zm-48-48a16 16 0 1 1 0 32 16 16 0 1 1 0-32z"/></svg>
+            </span>
+            <span>Skin Lesion Bottleneck (PubMed)</span>
+          </a>
+        </span>
+
       </div>
   </div>
 </section>
@@ -323,7 +351,7 @@
     <pre style="font-size: 16px;"><code>@article{yang2024textbook,
       title={A Textbook Remedy for Domain Shifts: Knowledge Priors for Medical Image Analysis}, 
       author={Yue Yang and Mona Gandhi and Yufei Wang and Yifan Wu and Michael S. Yao and Chris Callison-Burch and James C. Gee and Mark Yatskar},
-      journal={arXiv preprint arXiv:2312.09067},
+      journal={arXiv preprint arXiv:2405.14839},
       year={2024}
 }</code></pre>
   </div>
@@ -336,7 +364,7 @@
       <a class="icon-link" href="../papers/knobo.pdf" class="external-link" disabled>
         <i class="fas fa-file-pdf"></i>
       </a>
-      <a class="icon-link" href="https://arxiv.org/abs/2312.09067" class="external-link" disabled>
+      <a class="icon-link" href="https://arxiv.org/abs/2405.14839" class="external-link" disabled>
         <i class="ai ai-arxiv"></i>
       </a>
       <a class="icon-link" href="https://github.com/YueYANG1996/KnoBo" class="external-link" disabled>
@@ -350,7 +378,7 @@
       <div class="column is-8">
         <div class="content", style="text-align: center;">
           <p>
-            This website was developed by referencing <a href="https://github.com/nerfies/nerfies.github.io">this</a>.
+            This website was developed by referencing <a href="https://github.com/nerfies/nerfies.github.io">this</a>. Some of the icons are from <a href="https://www.flaticon.com/">flaticon.com</a>.
           </p>
         </div>
       </div>
