update website with knobo arxiv

--- a/index.html
+++ b/index.html
@@ -156,6 +156,32 @@
                 <heading>Recent Preprints</heading>
               </td>
             </tr>
+
+            <tr>
+              <td width="30%">
+                <img src="images/knobo-teaser.png" width="100%">
+              </td>
+              <td width="70%" valign="middle">
+                <div class="title">
+                  <a href="papers/knobo.pdf"><b>A Textbook Remedy for Domain Shifts: Knowledge Priors for Medical Image Analysis</b></a>
+                </div>
+                <div class="authors">
+                  Yue Yang, Mona Gandhi, Yufei Wang, Yifan Wu, Michael S. Yao, Chris Callison-Burch, James C. Gee, Mark Yatskar
+                </div>
+                <div class="venue">
+                    arxiv, 2024
+                </div>
+                <div class="tags">
+                  <a href="https://arxiv.org/abs/2405.14839">arxiv</a> /
+                  <a href="https://yueyang1996.github.io/knobo/">website</a> /
+                  <a href="https://github.com/YueYANG1996/KnoBo">code</a>
+                </div>
+                <div align="justify">
+                  TL;DR: We introduce Knowledge Bottlenecks (KnoBo) that incorporate priors from medical documents, such as PubMed, through inherently interpretable models. KnoBo is robust to domain shifts in medical images, e.g., data sampled from different hospitals or data confounded by demographic variables such as sex, race, etc. Overall, our work demonstrates that a key missing ingredient for robustness to distribution shift in medical imaging models is a prior rooted in knowledge.
+                </div>
+              </td>
+            </tr>
+
             <tr>
               <td width="30%">
                 <video poster="" autoplay="" muted loop="" style="pointer-events: none; width: 220px;">
@@ -673,7 +699,7 @@
             <tr>
               <td width="100%" valign="middle">
                 <heading>Academic Service</heading><br><br>
-                <strong>Reviewer</strong>: CVPR, ECCV, ACL, EMNLP, NAACL, EACL, COLM, TMLR.
+                <strong>Reviewer</strong>: CVPR, ECCV, ACL, EMNLP, NAACL, EACL, COLM, NeurIPS, TMLR.
               </td>
             </tr>
             </table>
@@ -686,8 +712,14 @@
               <table>
                 <tr>
                   <td width="100%">
+                    <b>WPE-II Presentation</b>, University of Pennsylvania, Philadelphia, PA, USA<br>
+                    <i>Language Guided Concept Bottlenecks for Interpretable and Robust Image Classification</i>, April 29, 2024. <a href="slides/bottleneck_wpe.pdf">slides</a> 
+                  </td>
+                </tr>
+                <tr>
+                  <td width="100%">
                     <a href="https://nlp.cis.upenn.edu/clunch.html"><b>CLUNCH</b></a>, University of Pennsylvania, Philadelphia, PA, USA<br>
-                    <i>Investigate Procedural Events in a Multimodal Fashion</i>, November 22, 2021. <a href="CLUNCH_talk.pdf">slides</a> 
+                    <i>Investigate Procedural Events in a Multimodal Fashion</i>, November 22, 2021. <a href="slides/CLUNCH_talk.pdf">slides</a> 
                   </td>
                 </tr>
               </table>
