--- a/knobo/index.html
+++ b/knobo/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="description"
         content="Knowledge Prior from Documents for Medical Domain Shifts">
-  <meta name="keywords" content="LLM, Embodied AI, Scene Generation">
+  <meta name="keywords" content="Medical, Robustness, Interpretability, Domain Shifts">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>A Textbook Remedy for Domain Shifts: Knowledge Priors for Medical Image Analysis</title>
 
@@ -134,6 +134,15 @@
                       <i class="fas fa-envelope"></i>
                   </span>
                   <span>Email</span>
+                  </a>
+              </span>
+              <span class="link-block">
+                <a href="https://x.com/YueYangAI/status/1794031734775820432"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                    <i class="fab fa-twitter"></i>
+                  </span>
+                  <span>Tweet</span>
                   </a>
               </span>
             </div>
@@ -372,6 +381,9 @@
       </a>
       <a class="icon-link" href="mailto: yueyang1@seas.upenn.edu; myatskar@seas.upenn.edu" class="external-link" disabled>
         <i class="fas fa-envelope"></i>
+      </a>
+      <a class="icon-link" href="https://x.com/YueYangAI/status/1794031734775820432" class="external-link" disabled>
+        <i class="fab fa-twitter"></i>
       </a>
     </div>
     <div class="columns is-centered">
