update before CVPR 2024

--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
                   </div>
                 </div>
                 <br>
-                <!-- p>
-                  <b style="color: #ac530f">I am looking for research intern opportunities in Summer 2024. Please reach out if you are interested in working with me!</b>
-                </p> -->
+                <p>
+                  <b style="color: #ac530f">I will be at CVPR from June 17 - 20, and I am looking for full-time positions starting in Summer 2025. <br> Please reach out to chat if you are interested in working with me!</b>
+                </p>
                 <!-- <img src="images/research_direction.png" width="80%"> -->
                 <!-- <p>
                   Before Penn, I was an undergrad in Mechanical Engineering at the <a href="http://www.doe.zju.edu.cn/doeen/">College of Energy Engineering</a> at Zhejiang University. I worked with <a href="https://person.zju.edu.cn/en/0010729"> Prof. Yuqi Huang</a> to study Computational Fluid Dynamics (CFD) during undergrads.
@@ -166,7 +166,7 @@
                   <a href="papers/knobo.pdf"><b>A Textbook Remedy for Domain Shifts: Knowledge Priors for Medical Image Analysis</b></a>
                 </div>
                 <div class="authors">
-                  Yue Yang, Mona Gandhi, Yufei Wang, Yifan Wu, Michael S. Yao, Chris Callison-Burch, James C. Gee, Mark Yatskar
+                  <strong>Yue Yang</strong>, Mona Gandhi, Yufei Wang, Yifan Wu, Michael S. Yao, Chris Callison-Burch, James C. Gee, Mark Yatskar
                 </div>
                 <div class="venue">
                     arxiv, 2024
@@ -699,7 +699,10 @@
             <tr>
               <td width="100%" valign="middle">
                 <heading>Academic Service</heading><br><br>
-                <strong>Reviewer</strong>: CVPR, ECCV, ACL, EMNLP, NAACL, EACL, COLM, NeurIPS, TMLR.
+                <strong>Reviewer</strong>: <br>
+                Computer Vision: CVPR, ECCV, SIGGRAPH Asia. <br>
+                Natural Language Processing: ACL, EMNLP, NAACL, EACL, COLM. <br>
+                Machine Learning: NeurIPS, TMLR.
               </td>
             </tr>
             </table>
